[Wisp] Update wisp option in TestDumpTenantThreadStacks.java
Summary: WispEngine.dispatch() is no longer a sync operation after
retiring WISP1, so we need to modify test usage accordingly.

Test Plan: jtreg TestDumpTenantThreadStacks.java

Reviewers: lei.yul, sanhong.lsh, shiyue.xw, chuansheng.lcs

Issue: https://aone.alibaba-inc.com/task/24590563

CR: https://code.aone.alibaba-inc.com/xcode/jdk11/codereview/2377342